# ovc

./: .clang-format  .gitignore  .gitmodules  README.md
.github/workflows/: clang-format-check.yml
Harley/HarleyConnect1Bro/: HarleyConnect1Bro-cache.lib  HarleyConnect1Bro.emn  HarleyConnect1Bro.emp  HarleyConnect1Bro.kicad_pcb  HarleyConnect1Bro.kicad_pcb-bak  HarleyConnect1Bro.kicad_pcb.5miltraces  HarleyConnect1Bro.net  HarleyConnect1Bro.sch  connector.sch
Harley/HarleyConnect2Bros/: HarleyConnect2Bros.emn  HarleyConnect2Bros.emp  HarleyConnect2Bros.kicad_pcb  HarleyConnect2Bros.net  HarleyConnect2Bros.pro  (+2 more)
docs/: _config.yml  hardware.md  index.md  software.md
firmware/ovc1/mcu/: CMakeLists.txt  stm32l4-toolchain.cmake
firmware/ovc1/mcu/blink/: CMakeLists.txt
firmware/ovc1/mcu/common/: CMakeLists.txt  adc.h  console.h  crc.c  crc.h  delay.h  flash.c  led.h  pin.c  pin.h  serial.c  stack.h  stm32l452.ld  systime.c
firmware/ovc1/mcu/common/stm32/: stm32l452xx.h
firmware/ovc1/mcu/hello/: CMakeLists.txt
firmware/ovc1/mcu/jetcam/: main.c
firmware/ovc1/mcu/test_pcierst/: main.c
firmware/ovc4/lpc_fw/: 90-ovc4.rules  CMakeLists.txt  Makefile  build_all.bat  build_all.sh  build_debug.sh  build_release.sh  cmake_install.cmake  flash_image.sh  output.map
firmware/ovc4/lpc_fw/LPC55S69/gcc/: LPC55S69_cm33_core0_flash.ld
firmware/ovc4/lpc_fw/board/: pin_mux.c  pin_mux.h
firmware/ovc4/lpc_fw/component/spi/: flexcomm_spi_adapter.c
firmware/ovc4/lpc_fw/drivers/: fsl_i2c.h  fsl_inputmux.h  fsl_pint.h  fsl_spi.c  fsl_spi.h
firmware/ovc4/lpc_fw/include/: camera_gpio.h  camera_i2c.h  imu_spi.h  ovc_hw_defs.h  usb_device_config.h  usb_device_descriptor.h  usb_packetdef.h  virtual_com.h
firmware/ovc4/lpc_fw/source/: camera_gpio.c  camera_i2c.c  i2c_driver.c  i2c_driver.h  imu_spi.c  main.c  spi_driver.c  usb_device_ch9.c  usb_device_config.h  usb_device_descriptor.c  virtual_com.c  virtual_com.h
firmware/ovc4/lpc_fw/usb/example/usb_device_cdc_vcom_lite/inf/: fsl_ucwxp.inf
ovc1/: README.md
ovc1/software/ros2/ovc/: CMakeLists.txt  ovc.cpp  ovc_ioctl.h  ovc_node.cpp
ovc2/: README.md
ovc3/: README.md
ovc3/software/ovc_embedded_driver/: CMakeLists.txt
ovc3/software/ovc_embedded_driver/cfg/: Ovc3.cfg
ovc3/software/ovc_embedded_driver/include/ovc_embedded_driver/: dma_shapeshifter.h  i2c_driver.h  image_publisher.h  sensor_constants.h  spi_driver.h  utilities.h  vdma_driver.h
ovc3/software/ovc_embedded_driver/msg/: ImageCorner.msg  Metadata.msg
ovc3/software/ovc_embedded_driver/src/: dma_shapeshifter.cpp  image_publisher.cpp  ovc_embedded_driver_node.cpp  spi_driver.cpp  vdma_driver.cpp
ovc5/: README.md
ovc5/software/camera_device_driver/: CMakeLists.txt
ovc5/software/camera_device_driver/include/ovc5_driver/: camera.hpp  camera_modules.hpp  ethernet_driver.hpp  ethernet_packetdef.h  ethernet_packetdef.hpp  gpio_driver.hpp  i2c_driver.h  sensor_manager.hpp  timer_driver.hpp  uio_driver.hpp  vdma_driver.h
ovc5/software/camera_device_driver/include/ovc5_driver/cameras/: picam_v2.hpp
ovc5/software/camera_device_driver/src/: ethernet_driver.cpp  gpio_driver.cpp  i2c_driver.cpp  ovc5_driver.cpp  sensor_manager.cpp  timer_driver.cpp  uio_driver.cpp  vdma_driver.cpp
ovc5/software/camera_device_driver/src/cameras/: picam_v2.cpp
ovc5/software/camera_host_driver/: CMakeLists.txt
ovc5/software/camera_host_driver/include/: ethernet_packetdef.h  latency_tester.hpp  subscriber.hpp
ovc5/software/camera_host_driver/src/: latency_tester.cpp  ovc5_host_driver.cpp  subscriber.cpp
ovc5/software/libovc/: CMakeLists.txt  package.xml
ovc5/software/libovc/include/libovc/: ethernet_packetdef.hpp  ovc.hpp  server.hpp  subscriber.hpp
ovc5/software/libovc/src/: ovc.cpp  server.cpp  subscriber.cpp
ovc5/software/ros_drivers/ros1/: CMakeLists.txt  package.xml
ovc5/software/ros_drivers/ros1/cfg/: Params.cfg
ovc5/software/ros_drivers/ros1/src/: ovc_driver.cpp
ovc5/software/ros_drivers/ros2/: CMakeLists.txt  package.xml
ovc5/software/ros_drivers/ros2/src/: ovc_driver.cpp
ovc_mini/: .gitignore  README.md  build  setup.sh
software/ovc1/ros/ovc/: CMakeLists.txt  corner_viewer.cpp  ovc.cpp  ovc.h  ovc_c.cpp  ovc_c.h  ovc_node.cpp  ovc_single_cam_small.py  package.xml  software_corner_detector.cpp  test_signature.cpp
software/ovc1/ros/ovc/cfg/: ovc.cfg
software/ovc2/ros/ovc2/: CMakeLists.txt  Makefile  cli.cpp  corner_viewer.cpp  ovc2.cpp  ovc2.h  ovc2_imu_state.h  ovc2_ioctl.h  ovc2_node.cpp  package.xml
software/ovc2/ros/ovc2/bags/: extract_timestamps.py
software/ovc2/ros/ovc2/msg/: ImageCornerArray.msg  Metadata.msg
software/ovc3/ovc_embedded_driver/: .gitignore  CMakeLists.txt  README.md  package.xml
software/ovc3/ovc_embedded_driver/cfg/: Ovc3.cfg
software/ovc3/ovc_embedded_driver/include/ovc_embedded_driver/: i2c_driver.h  image_publisher.h  sensor_constants.h  spi_driver.h  uio_driver.h  utilities.h  vdma_driver.h
software/ovc3/ovc_embedded_driver/msg/: ImageCornerArray.msg  Metadata.msg
software/ovc3/ovc_embedded_driver/src/: i2c_driver.cpp  image_publisher.cpp  ovc_embedded_driver_node.cpp  spi_driver.cpp  uio_driver.cpp  vdma_driver.cpp
software/ovc3/ovc_embedded_driver/srv/: ConfigureFAST.srv
software/ovc4/ovc4_driver/: .gitignore  CMakeLists.txt  package.xml
software/ovc4/ovc4_driver/cmake/: FindArgus.cmake
software/ovc4/ovc4_driver/include/ovc4_driver/: atomic_ros_time.hpp  camera.hpp  cameras.h  cameras.hpp  ethernet_driver.hpp  sensor_manager.hpp  uio_driver.hpp  usb_driver.h  usb_driver.hpp
software/ovc4/ovc4_driver/include/ovc4_driver/cameras/: picam_hq.hpp  picam_v2.hpp
software/ovc4/ovc4_driver/src/: camera.cpp  cameras.cpp  ethernet_driver.cpp  ovc4_driver_node.cpp  sensor_manager.cpp  uio_driver.cpp  usb_driver.cpp
software/ovc4/ovc4_driver/src/cameras/: picam_hq.cpp  picam_v2.cpp
software/ovc5/camera_host_driver/: CMakeLists.txt
software/ovc5/camera_host_driver/include/: latency_tester.hpp  subscriber.hpp
software/ovc5/camera_host_driver/src/: latency_tester.cpp  ovc5_host_driver.cpp  subscriber.cpp
(+1695 files in other folders)
