<?xml version="1.0"?>
<package format="2">
  <name>ovc_embedded_driver</name>
  <version>0.0.0</version>
  <description>The ovc_embedded_driver package</description>
  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
