<?xml version="1.0"?>
<package format="2">
  <name>ovc4_driver</name>
  <version>0.0.0</version>
  <description>ovc4 ROS driver</description>

  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
</package>
