<?xml version="1.0"?>
<package format="2">
  <name>ovc_driver</name>
  <version>0.0.0</version>
  <description>The ovc_driver package</description>

  <maintainer email="greg@openrobotics.org">Greg Balke</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libovc</depend>

  <depend>dynamic_reconfigure</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
